fix(core): small improvements on the the scheduler